--- a/cocart_fibs.tex
+++ b/cocart_fibs.tex
@@ -834,7 +834,7 @@ Cocartesian morphisms automatically respect path components in the following sen
       & (\Lambda^{2}_{0} \backslash X)^{e'} \times_{(\Lambda^{2}_{0} \backslash Y)^{f(e')}} (\Delta^{2} \backslash Y)^{f(e')}
     \end{tikzcd}
   \end{equation*}
-  By the $2/3$ property for weak equivalences, the map on the left is a weak equivalence if and only if the map on the right is a weak equivalence, which is what we had to show.
+  By the $2/3$ property for weak equivalences, the map on the left is a weak equivalence if and only if the map on the right is a weak equivalence, which is what we wanted to show.
 \end{proof}
 
 \begin{definition}
