--- a/main.tex
+++ b/main.tex
@@ -6,12 +6,34 @@
 %bibliography location
 \addbibresource{sources.bib}
 
-\title{Cocartesian fibrations between Segal \\ spaces of spans}
+\title{Cocartesian Fibrations and Categories of Spans \\ \Large{Towards a Framework for Homotopy-Coherent \\ Transfer Theories}}
 \author{Angus Rush}
 
 \begin{document}
 
-\maketitle 
+\begin{titlepage}
+	
+  ~\\
+  \vspace{3em}~\\
+  {\centering
+    {\fontsize{30}{30} \bfseries Cocartesian Fibrations, Categories of Spans, and Transfer Theories}
+    \vspace{1.3cm} \\
+    {\huge \textit{Angus Rush}\\}
+    \vspace{0.8cm}
+    {\LARGE \date\par}
+    \vspace{4cm}
+    {\huge Master's Thesis\\}
+    \vspace{0.4cm}
+    {\Large 
+      Advisor: Prof.\ Dr.\ Tobias Dyckerhoff\\ \vspace{0.3cm}
+    Second Referee: Jun.-Prof.\ Julian Holstein }\\
+    \vspace{2cm}
+    {\LARGE Universität Hamburg\\
+    Department of Mathematics\\}
+
+  }	
+\end{titlepage}
+
 \tableofcontents
 
 \subfile{introduction.tex}
