--- a/mystyle.sty
+++ b/mystyle.sty
@@ -81,6 +81,7 @@
 \newcommand{\tallabs}[1]{\left| #1 \right|}
 % Category theory
 \newcommand{\id}{\mathrm{id}}
+\newcommand{\const}{\mathrm{const}}
 \newcommand{\Sing}{\mathbf{Sing}}
 \newcommand{\op}{^{\mathrm{op}}}
 \newcommand{\otm}{^{\otimes}}
