--- a/constrained_spans.tex
+++ b/constrained_spans.tex
@@ -7,9 +7,9 @@
 
 \subsection{Basic definitions}
 
-We recall the basic definitions of Segal spaces of spans. Note that spans as we will define them form not only a Segal space, but a \emph{complete} Segal space; this will not concern us. For more information, we direct the reader to \cite{spectralmackeyfunctors1}. This section is intended to be a summary of the results found there which we will need.
+We recall the basic definitions of Segal spaces of spans. Note that spans as we will define them form not only a Segal space, but a \emph{complete} Segal space; for the most part, this will not concern us. For more information, we direct the reader to \cite{spectralmackeyfunctors1}. This section is intended to be a summary of the results found there which we will need.
 
-The objects of our study will be $\infty$-categories whose morphisms are spans
+The objects of our study will be $\infty$-categories whose morphisms are spans in some quasicategory $\category{C}$, i.e.\ diagrams in $\category{C}$ of the form
 \begin{equation*}
   \begin{tikzcd}
     & y
@@ -18,9 +18,9 @@ The objects of our study will be $\infty$-categories whose morphisms are spans
     \\
     x
     && x'
-  \end{tikzcd}
+  \end{tikzcd}.
 \end{equation*}
-in some quasicategory $\category{C}$ (this means that $x$, $x'$, and $y$ are objects in $\category{C}$, and that $\phi$ and $\psi$ are morphisms in $\category{C}$). We will want to be able to place certain conditions on the legs $\phi$ and $\psi$ of our spans. For example, we may want to restrict our attention to spans such that $\phi$ is an equivalence, or has contractible fibers. More precisely, we pick out two subcategories of $\category{C}$ to which the respective legs of our spans must belong.
+We will want to be able to place certain conditions on the legs $\phi$ and $\psi$ of our spans. For example, we may want to restrict our attention to spans such that $\phi$ is an equivalence. More precisely, we pick out two subcategories of $\category{C}$ to which the respective legs of our spans must belong.
 
 \begin{definition}
   A \defn{triple} of categories is a triple $\triple{C}$, where $\category{C}$ is a quasicategory where $\category{C}_{\dagger}$ and $\category{C}^{\dagger}$ are subcategories (in the sense of \cite[Sec.\ 1.2.11]{highertopostheory}), each of which contain all equivalences.
@@ -51,17 +51,17 @@ In order for a triple of categories to be able to support a category of spans, i
   \label{def:adequate_triple}
   A triple $(\category{C}, \category{C}_{\dagger}, \category{C}^{\dagger})$ is said to be \defn{adequate} if it has the following properties:
   \begin{enumerate}
-    \item For any morphism $y \ing x \in \category{C}_{\dagger}$ and any morphism $x' \eg x \in \category{C}^{\dagger}$, there exists a pullback square
+    \item For any ingressive morphism $f \in \category{C}_{\dagger}$ and any egressive morphism $g \in \category{C}^{\dagger}$, there exists a pullback square
       \begin{equation*}
         \begin{tikzcd}
           y'
           \arrow[r]
           \arrow[d]
           & x'
-          \arrow[d, two heads]
+          \arrow[d, two heads, "g"]
           \\
           y
-          \arrow[r, rightarrowtail]
+          \arrow[r, rightarrowtail, "f"]
           & x
         \end{tikzcd}.
       \end{equation*}
@@ -104,7 +104,7 @@ It is now time to set about building our categories of spans. We give only a ske
 \begin{itemize}
   \item The elements of $\Sigma_{n}$ are pairs of integers $(i, j)$, with $0 \leq i \leq j \leq n$.
 
-  \item We define a partial order via 
+  \item For $(i, j)$, $(i', j') \in \Sigma_{n}$, we define
     \begin{equation*}
       (i, j) \leq (i', j') \iff i \leq i' \leq j' \leq j.
     \end{equation*}
@@ -162,7 +162,7 @@ These $\Sigma_{n}$ assemble into a cosimplicial object
 \begin{equation*}
   \Delta \to \SSet;\qquad [n] \mapsto N(\Sigma_{n}),
 \end{equation*}
-Left Kan extending yields a functor $\sd\colon \SSet \to \SSet$. General abstract nonsense gives us right adjoint $\Span'\colon \SSet \to \SSet$ forming an adjunction
+Left Kan extending along the Yoneda embedding $\Delta \hookrightarrow \SSet$ yields a functor $\sd\colon \SSet \to \SSet$. General abstract nonsense gives us right adjoint $\Span'\colon \SSet \to \SSet$ forming an adjunction
 \begin{equation*}
   \sd: \SSet \longleftrightarrow \SSet : \Span'.
 \end{equation*}
@@ -171,7 +171,54 @@ For any simplicial set $A$, the simplicial set $\Span'(A)$ has $n$-simplices
   \Span'(A)_{n} = \Hom_{\SSet}(\sd(\Delta^{n}), A).
 \end{equation*}
 
-Fix some triple $\triple{C}$. We will call a functor $\sd(\Delta^{n}) \to \category{C}$ is called \emph{ambigressive Cartesian} if the image of each square in $\sd(\Delta^{n}) = N(\Sigma_{n})$ of the form
+For example, for $n = 4$, such an $n$-simplex consists of a diagram of the form
+\begin{equation*}
+  \begin{tikzcd}[column sep=tiny, row sep=small]
+    \\
+    &&&& X_{04}
+    \arrow[dl]
+    \arrow[dr]
+    \\
+    &&& X_{03}
+    \arrow[dl]
+    \arrow[dr]
+    && X_{14}
+    \arrow[dl]
+    \arrow[dr]
+    \\
+    && X_{02}
+    \arrow[dl]
+    \arrow[dr]
+    && X_{13}
+    \arrow[dl]
+    \arrow[dr]
+    && X_{24}
+    \arrow[dl]
+    \arrow[dr]
+    \\
+    & X_{01}
+    \arrow[dl]
+    \arrow[dr]
+    && X_{12}
+    \arrow[dl]
+    \arrow[dr]
+    && X_{23}
+    \arrow[dl]
+    \arrow[dr]
+    && X_{34}
+    \arrow[dl]
+    \arrow[dr]
+    \\
+    X_{00}
+    && X_{11}
+    && X_{22}
+    && X_{33}
+    && X_{44}
+  \end{tikzcd}.
+\end{equation*}
+For any $n$-simplex $\sd(\Delta^{n}) \to \category{C}$ corresponding to a diagram as above, we will call the morphisms $X_{ij} \to X_{ij'}$ \emph{backward-facing,} and the morphisms $X_{ij} \to X_{i'j}$ \emph{forward-facing.} 
+
+Fix some adequate triple $\triple{C}$. We will call a functor $\sd(\Delta^{n}) \to \category{C}$ \emph{ambigressive Cartesian} if each square in $\sd(\Delta^{n}) = N(\Sigma_{n})$ of the form
 \begin{equation*}
   \begin{tikzcd}[column sep=tiny]
     & {(i, j)}
@@ -186,26 +233,89 @@ Fix some triple $\triple{C}$. We will call a functor $\sd(\Delta^{n}) \to \categ
     & {(i + k , j - \ell)}
   \end{tikzcd}
 \end{equation*}
-(where we include the possibilities $k = 0$ and $\ell = 0$) is an ambigressive pullback. The quasicategory $\Span\triple{C}$ is then defined level-wise to be the subset
+(where we include the possibilities $k = 0$ and $\ell = 0$) is mapped to an ambigressive pullback square,
 \begin{equation*}
-  \Span\triple{C} \subseteq \Span'(\category{C})
+  \begin{tikzcd}[column sep=tiny]
+    & X_{ij}
+    \arrow[dr]
+    \arrow[dl]
+    \\
+    X_{i(j-\ell)}
+    \arrow[dr]
+    & & X_{(i+k)(j)}
+    \arrow[dl]
+    \\
+    & X_{(i+k)(j-\ell)}
+  \end{tikzcd}
 \end{equation*}
-on functors $\sd(\Delta^{n}) \to \category{C}$ which are ambigressive Cartesian.
+where the backwards-facing morphsims are egressive and the forwards-facing morphisms are ingressive. 
 
-Analogously, for an adequate triple $\triple{C}$ and any simplicial set $A$, define
-\begin{equation*}
-  \Map^{\mathrm{aCart}}(\sd(A), \category{C})^{\simeq} \subseteq \Map(\sd(A), \category{C})^{\simeq}
-\end{equation*}
-to be the full simplicial subset on functors $\sd(A)$ such that for each standard simplex $\sigma$ of $A$, the image of $\sd(\sigma)$ in $\category{C}$ is ambigressive Cartesian. The (complete) Segal space of spans $\SPAN\triple{C}$ is defined level-wise by 
-\begin{equation*}
-  \SPAN\triple{C}_{n} = \Map^{\mathrm{aCart}}(\sd(\Delta^{n}), \category{C})^{\simeq}.
-\end{equation*}
+\begin{definition}
+  We define a simplicial set $\Span\triple{C}$ level-wise to be the subset
+  \begin{equation*}
+    \Span\triple{C}_{n} \subseteq \Span'(\category{C})_{n}
+  \end{equation*}
+  on functors $\sd(\Delta^{n}) \to \category{C}$ which are ambigressive Cartesian.
+\end{definition}
 
-For a proof that this really is a Segal space, the reader is once again referred to \cite{spectralmackeyfunctors1}.
+While it is not hard to check that the face and degeneracy maps on $\Span'\triple{C}$ restrict to $\Span\triple{C}$ (and thus that the above construction really produces a simplicial set), solving the lifting problems necessary to prove directly that $\Span\triple{C}$ is a quasicategory turns out to be combinatorially strenuous. It turns out to be easier to switch to a new model of quasicategories, (complete) Segal spaces, which give easier access to homotopical data.
+
+To that end, for an adequate triple $\triple{C}$ and any simplicial set $A$, we make the following defintion.
+\begin{definition}
+  \label{def:acart}
+  We define a simplicial set $\Map^{\mathrm{aCart}}(\sd(A), \category{C})^{\simeq}$ to be the full simplicial subset
+  \begin{equation*}
+    \Map^{\mathrm{aCart}}(\sd(A), \category{C})^{\simeq} \subseteq \Map(\sd(A) \category{C})^{\simeq}
+  \end{equation*}
+  on functors $\sd(A) \to \category{C}$ such that for each standard simplex $\sigma$ of $A$, the image of $\sd(\sigma)$ in $\category{C}$ is ambigressive Cartesian. 
+\end{definition}
+
+\begin{definition}
+  The (complete) Segal space of spans $\SPAN\triple{C}$ is defined level-wise by 
+  \begin{equation*}
+    \SPAN\triple{C}_{n} = \Map^{\mathrm{aCart}}(\sd(\Delta^{n}), \category{C})^{\simeq}.
+  \end{equation*}
+\end{definition}
+
+For a proof that this really is a Segal space, the reader is once again referred to \cite{spectralmackeyfunctors1}. Note that the quasicategory of spans $\Span\triple{C}$ is the bottom row of the complete Segal space of span $\SPAN\triple{C}$; that is,
+\begin{equation*}
+  \Span\triple{C} = \SPAN\triple{C}/\Delta^{0}.
+\end{equation*}
+\hyperref[prop:joyal-tierney_quillen_equivalence]{Proposition~\ref*{prop:joyal-tierney_quillen_equivalence}} thus immediately implies that $\Span\triple{C}$ is a quasicategory.
+
+\subsection{Important example: spans and equivalences}
+\label{ssc:important_example_spans_and_equivalences}
+
+Let $\category{C}$ be a quasicategory. One can think about spans in $\category{C}$ as `fractions' of morphisms in $\category{C}$. Consider a span in $\category{C}$
+\begin{equation*}
+  \begin{tikzcd}
+    & Y
+    \arrow[dl, swap, "g"]
+    \arrow[dr, "f"]
+    \\
+    X
+    && X'
+  \end{tikzcd}.
+\end{equation*}
+If the morphism $g$ were invertible, we could fill this to a full 2-simplex
+\begin{equation*}
+  \begin{tikzcd}
+    & Y
+    \arrow[dl, swap, "g"]
+    \arrow[dr, "f"]
+    \\
+    X
+    \arrow[rr, swap, dashed, "f \circ g^{-1}"]
+    && X'
+  \end{tikzcd}.
+\end{equation*}
+Even if $g$ is not invertible, we can think of our span as representing formally a map `$f \circ g^{-1}\colon X \to X'$', which may not exist in $\category{C}$.
+
+With this point of view in mind, if we build from a quasicategory $\category{C}$ a category of spans whose forwards-facing legs are arbitrary morphisms in $\category{C}$, and whose backward-facing legs are equivalences, then we have not really done anything; each span, thought of as a formal morphism in $\category{C}$, is represented by an actual morphism in $\category{C}$. Thus, the category of spans in $\category{C}$ whose backward-facing legs are equivalences should be equivalent to the category $\category{C}$. In the following example, we construct this equivalence.
 
 \begin{example}
   \label{eg:spans_with_equivalences_on_one_leg}
-  For any quasicategory, we can define a triple $(\category{C}, \category{C}\downdag = \category{C}, \category{C}\updag = \category{C}^{\simeq})$. These selections of ingressive and egressive morphisms correspond to spans of the form
+  For any quasicategory $\category{C}$, we can define a triple $(\category{C}, \category{C}\downdag = \category{C}, \category{C}\updag = \category{C}^{\simeq})$. These choices of ingressive and egressive morphisms correspond to spans of the form
   \begin{equation*}
     \begin{tikzcd}
       & Y
@@ -221,7 +331,7 @@ For a proof that this really is a Segal space, the reader is once again referred
     \begin{tikzcd}
       X
       \arrow[r, dashed, "g^{-1} \circ f"]
-      \arrow[d, swap, equals]
+      \arrow[d, swap, dashed, "\id"]
       & X'
       \arrow[d, "g"]
       \\
@@ -240,102 +350,124 @@ For a proof that this really is a Segal space, the reader is once again referred
     [n] \hookrightarrow \Sigma_{n} \twoheadrightarrow [n],
   \end{equation*}
   where the first map takes $i \mapsto (i, n)$, and the second takes $(i, j) \mapsto i$. In the case $n = 2$, the inclusion can be drawn
-  \begin{equation*}
-    \begin{tikzcd}[row sep=small, column sep=tiny]
-      0
-      \arrow[dr]
-      \\
-      & 1
-      \arrow[dr]
-      \\
-      && 2
-    \end{tikzcd}
-    \qquad \hookrightarrow \qquad
-    \begin{tikzcd}[row sep=small, column sep=tiny]
-      && (0, 2)
-      \arrow[dl]
-      \arrow[dr]
-      \\
-      & (0, 1)
-      \arrow[dl]
-      \arrow[dr]
-      && (1, 2)
-      \arrow[dl]
-      \arrow[dr]
-      \\
-      (0, 0)
-      && (1, 1)
-      && (2, 2)
-    \end{tikzcd},
-  \end{equation*}
-  and the map $\sd(\Delta^{n}) \to \Delta^{n}$ `collapses' the leftward-facing legs of the spans.
 
-  Applying the nerve, we find a retraction of simplicial sets
-  \begin{equation*}
-    \Delta^{n} \hookrightarrow \sd(\Delta^{n}) \twoheadrightarrow \Delta^{n}.
-  \end{equation*}
-  Pulling back along these maps gives us, for each $n$, a retraction
-  \begin{equation*}
-    \begin{tikzcd}
-      \Fun(\Delta^{n}, \category{C}) 
-      \arrow[r, hook, "i'_{n}"]
-      & \Fun(\sd(\Delta^{n}), \category{C}) 
-      \arrow[r, hook, "r'_{n}"]
-      & \Fun(\Delta^{n}, \category{C})
-    \end{tikzcd}.
-  \end{equation*}
-  Note that the image of the inclusion $i'_{n}$ consists of spans whose backwards-facing legs are identities (hence certainly equivalences), and hence that we can restrict the total space of our retraction:
-  \begin{equation*}
-    \begin{tikzcd}
-      \Fun(\Delta^{n}, \category{C}) 
-      \arrow[r, hook, "i_{n}"]
-      & \Fun^{\aCart}(\sd(\Delta^{n}), \category{C}) 
-      \arrow[r, two heads, "r_{n}"]
-      & \Fun(\Delta^{n}, \category{C})
-    \end{tikzcd}.
-  \end{equation*}
+  \tikzset{LA/.style = {line width=#1, -{Straight Barb[length=3pt]}}, LA/.default=1.5pt}
+\begin{equation*}
+  \begin{tikzcd}[row sep=small, column sep=tiny]
+    0
+    \arrow[dr, LA]
+    \\
+    & 1
+    \arrow[dr, LA]
+    \\
+    && 2
+  \end{tikzcd}
+  \qquad \hookrightarrow \qquad
+  \begin{tikzcd}[row sep=small, column sep=tiny]
+    && (0, 2)
+    \arrow[dl]
+    \arrow[dr, LA]
+    \\
+    & (0, 1)
+    \arrow[dl]
+    \arrow[dr]
+    && (1, 2)
+    \arrow[dl]
+    \arrow[dr, LA]
+    \\
+    (0, 0)
+    && (1, 1)
+    && (2, 2)
+  \end{tikzcd},
+\end{equation*}
+and the map $\sd(\Delta^{n}) \to \Delta^{n}$ `collapses' the backward-facing legs of the spans. The general case is hopefully clear.
 
-  It is not hard to convince oneself that a map $\sd(\Delta^{n}) \to \category{C}$ is ambigressive cartesian if and only if it is a right Kan extension of its restriction along $\Delta^{n} \hookrightarrow \sd(\Delta^{n})$. In the case $n = 2$, for example, it is clear from the limit formula that any right Kan extension of a diagram $\Delta^{2} \to \category{C}$ along the inclusion $\Delta^{2} \hookrightarrow \sd(\Delta^{2})$ is of the form
-  \begin{equation*}
-    \begin{tikzcd}[row sep=small, column sep=tiny]
-      X
-      \arrow[dr]
-      \\
-      & Y
-      \arrow[dr]
-      \\
-      && Z
-    \end{tikzcd}
-    \qquad \hookrightarrow \qquad
-    \begin{tikzcd}[row sep=small, column sep=tiny]
-      && X
-      \arrow[dl, swap, "\simeq"]
-      \arrow[dr]
-      \\
-      & X'
-      \arrow[dl, swap, "\simeq"]
-      \arrow[dr]
-      && Y
-      \arrow[dl, swap, "\simeq"]
-      \arrow[dr]
-      \\
-      X''
-      && Y'
-      && Z
-    \end{tikzcd},
-  \end{equation*}
-  (and conversely, any diagram of the above form is a right Kan extension), and diagrams of the above form are precisely those which are ambigressive cartesian. Put differently, $\Fun^{\aCart}(\sd(\Delta^{n}), \category{C})$ is the full subcategory of $\Fun(\sd(\Delta^{n}), \category{C})$ on functors which are right Kan extensions of their restrictions to $\Delta^{n}$. This, together with \cite[Prop.\ 4.3.2.15]{highertopostheory} implies that $r_{n}$ is a trivial fibration for all $n$. The identity $\id_{\Fun(\Delta^{n}, \category{C})}$ is certainly a weak Kan equivalence, so by the $2/3$ property for weak equivalences, $i_{n}$ is also a weak equivalence for all $n$.
+Applying the nerve, we find a retraction of simplicial sets
+\begin{equation*}
+  \Delta^{n} \hookrightarrow \sd(\Delta^{n}) \twoheadrightarrow \Delta^{n}.
+\end{equation*}
+Pulling back along these maps gives us, for each $n$, a retraction
+\begin{equation*}
+  \begin{tikzcd}
+    \Map(\Delta^{n}, \category{C})^{\simeq}
+    \arrow[r, hook, "i'_{n}"]
+    & \Map(\sd(\Delta^{n}), \category{C})^{\simeq} 
+    \arrow[r, hook, "r'_{n}"]
+    & \Map(\Delta^{n}, \category{C})^{\simeq}
+  \end{tikzcd}.
+\end{equation*}
+Note that the image of the inclusion $i'_{n}$ consists of spans whose backwards-facing legs are identities (hence certainly equivalences), and hence that we can restrict the total space of our retraction:
+\begin{equation*}
+  \begin{tikzcd}
+    \Map(\Delta^{n}, \category{C})^{\simeq} 
+    \arrow[r, hook, "i_{n}"]
+    & \Map^{\aCart}(\sd(\Delta^{n}), \category{C})^{\simeq}
+    \arrow[r, two heads, "r_{n}"]
+    & \Map(\Delta^{n}, \category{C})^{\simeq}
+  \end{tikzcd}.
+\end{equation*}
 
-  The projections $\sd(\Delta^{n}) \to \Delta^{n}$ assemble into a cosimplicial object $\sd(\Delta^{\bullet}) \to \Delta^{\bullet}$. This means that the maps $i_{n}$ assemble into a map of Segal spaces
-  \begin{equation*}
-    i\colon \Gamma(\category{C}) = \Fun(\Delta^{\bullet}, \category{C}) \to \Fun^{\aCart}(\sd(\Delta^{\bullet}), \category{C}) = \SPAN^{\simeq}(\category{C})
-  \end{equation*}
-  which is a level-wise Kan weak equivalence, and hence a weak equivalence in the complete Segal spaces model structure (for more information, see \cite{qcats_vs_segal_spaces}, especially the discussion following Thm.\ 4.1). Here $\Gamma(\category{C})$ is the complete Segal space defined in \cite{qcats_vs_segal_spaces} in the discussion preceding Thm.\ 4.11.
+It is not hard to convince oneself that a map $\sd(\Delta^{n}) \to \category{C}$ is ambigressive cartesian if and only if it is a right Kan extension of its restriction along $\Delta^{n} \hookrightarrow \sd(\Delta^{n})$. In the case $n = 2$, for example, it is clear from the limit formula that any right Kan extension of a diagram $\Delta^{2} \to \category{C}$ along the inclusion $\Delta^{2} \hookrightarrow \sd(\Delta^{2})$ is of the form
+\begin{equation*}
+  \begin{tikzcd}[row sep=small, column sep=tiny]
+    X
+    \arrow[dr]
+    \\
+    & Y
+    \arrow[dr]
+    \\
+    && Z
+  \end{tikzcd}
+  \qquad \hookrightarrow \qquad
+  \begin{tikzcd}[row sep=small, column sep=tiny]
+    && X
+    \arrow[dl, swap, "\simeq"]
+    \arrow[dr]
+    \\
+    & X'
+    \arrow[dl, swap, "\simeq"]
+    \arrow[dr]
+    && Y
+    \arrow[dl, swap, "\simeq"]
+    \arrow[dr]
+    \\
+    X''
+    && Y'
+    && Z
+  \end{tikzcd},
+\end{equation*}
+(and conversely, any diagram of the above form is a right Kan extension), and diagrams of the above form are precisely those which are ambigressive cartesian. Put differently, $\Fun^{\aCart}(\sd(\Delta^{n}), \category{C})$ is the full subcategory of $\Fun(\sd(\Delta^{n}), \category{C})$ on functors which are right Kan extensions of their restrictions to $\Delta^{n}$. This, together with \cite[Prop.\ 4.3.2.15]{highertopostheory} implies that $r_{n}$ is a trivial fibration for all $n$. The identity $\id_{\Fun(\Delta^{n}, \category{C})}$ is certainly a weak Kan equivalence, so by the $2/3$ property for weak equivalences, $i_{n}$ is also a weak equivalence for all $n$.
 
-  Thus, the restricion of $i$ to first rows $i / \Delta^{0}$ is a Joyal weak equivalence, which is what we wanted to show.
+The projections $\sd(\Delta^{n}) \to \Delta^{n}$ assemble into a cosimplicial object $\sd(\Delta^{\bullet}) \to \Delta^{\bullet}$. From this it easily follows that the maps $i_{n}$ assemble into a map of Segal spaces
+\begin{equation*}
+  i\colon \Gamma(\category{C}) = \Fun(\Delta^{\bullet}, \category{C}) \to \Fun^{\aCart}(\sd(\Delta^{\bullet}), \category{C}) = \SPAN^{\simeq}(\category{C})
+\end{equation*}
+which is a level-wise Kan weak equivalence, and hence a weak equivalence in the complete Segal spaces model structure.\footnote{For a brief review of the model structures in question, see \hyperref[sss:a_brief_list_of_model_structures]{Appendix~\ref*{sss:a_brief_list_of_model_structures}}. For more information, see \cite{qcats_vs_segal_spaces}, especially the discussion following Thm.\ 4.1.} Here $\Gamma(\category{C})$ is the complete Segal space defined in \cite{qcats_vs_segal_spaces} in the discussion preceding Thm.\ 4.11. In \cite{qcats_vs_segal_spaces} it is also discussed that the functor $( - )/\Delta^{0}\colon \SSSet^{\mathrm{CSS}} \to \SSet^{\mathrm{Joyal}}$ is the right Quillen functor in a Quillen equivalence between the Complete Segal Space model structure and the Joyal model structure. Thus, because $\Gamma(\category{C})$ and $\SPAN^{\simeq}(\category{C})$ are complete Segal spaces, the restricion of $i$ to first rows $i / \Delta^{0}$ is a weak categorical equivalence, which is what we wanted to show.
 \end{example}
 
-\subsubsection*{Maps between triples}
+\hyperref[eg:spans_with_equivalences_on_one_leg]{Example~\ref*{eg:spans_with_equivalences_on_one_leg}} allows us to find a copy of $\category{C}$ in a category of spans. Similarly, if we look at spans whose forward-facing legs are equivalences, we find a copy of $\category{C}\op$.
+
+\begin{example}
+  \label{eg:spans_with_equivalences_on_forwards_leg}
+  For any quasicategory $\category{C}$, we can define an adequate triple $(\category{C}, \category{C}\downdag = \category{C}^{\simeq}, \category{C}\updag = \category{C})$. These selections of ingressive and egressive morphisms correspond to spans of the form
+  \begin{equation*}
+    \begin{tikzcd}
+      & Y
+      \arrow[dl]
+      \arrow[dr, "\simeq"]
+      \\
+      X
+      && X'
+    \end{tikzcd},
+  \end{equation*}
+  i.e.\ spans such that the forward-facing map $Y \to X$ is an equivalence in $\category{C}$. We will denote the corresponding category of spans by $\Span_{\simeq}(\category{C})$. Exactly analogous reasoning to that in \hyperref[eg:spans_with_equivalences_on_one_leg]{Example~\ref*{eg:spans_with_equivalences_on_one_leg}} gives us a categorical equivalence
+  \begin{equation*}
+    \category{C}\op \to \Span_{\simeq}(\category{C}).
+  \end{equation*}
+\end{example}
+
+\subsection{Maps between triples}
+\label{ssc:maps_between_triples}
 
 A functor between adequate triples $\triple{C} \to \triple{D}$ is a functor
 \begin{equation*}
@@ -351,7 +483,7 @@ The goal of the remainder of this section is to provide a proof of the following
 
 \begin{theorem}
   \label{thm:main}
-  Let $p\colon \triple{C} \to \triple{D}$ be a functor of adequate triples. Further suppose that $p$ satisfies the following conditions:
+  Let $p\colon \triple{C} \to \triple{D}$ be a functor of adequate triples which is an inner fibration. Further suppose that $p$ satisfies the following conditions:
   \begin{enumerate}
     \item For any ingressive morphism $g\colon s \ing t$ of $\category{D}$ and any object $x \in \category{C}_{s}$, there exists an ingressive morphism $f\colon x \ing y$ covering $g$ which is both $p$-cocartesian and $p_{\dagger}$-cocartesian.
 
@@ -372,7 +504,7 @@ The goal of the remainder of this section is to provide a proof of the following
       in $\category{C}$ such that $p(\sigma)$ is ambigressive pullback in $\category{D}$, with in- and egressive morphisms as marked, and $f$ is $p$-cocartesian. Then $f'$ is $p$-cocartesian if and only if $\sigma$ is an ambigressive pullback square (and in particular $\psi$ is egressive).
   \end{enumerate}
 
-  Then if a morphism in $\Span\triple{C}$ is of the form
+  Then $\pi$ is an inner fibration, and if a morphism in $\Span\triple{C}$ is of the form
   \begin{equation*}
     \begin{tikzcd}
       & y
